Update to 1.1 lib

--- a/src/style.css
+++ b/src/style.css
@@ -1,22 +1,8 @@
-@font-face {
-    font-family: 'Benton Sans';
-    src: url(./fonts/BentonSans-Book.woff);
-    font-style: normal;
-    font-weight: normal;
-}
-
-@font-face {
-    font-family: 'Benton Sans Medium';
-    src: url(./fonts/BentonSans-Medium.woff);
-    font-style: normal;
-    font-weight: bold;
-}
-
 html,
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Benton Sans', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Benton Sans', Arial, Helvetica, sans-serif;
     font-size: 12px;
     color: rgba(0, 0, 0, 0.8);
     box-sizing: border-box;
@@ -81,7 +67,7 @@ body {
 }
 
 .title {
-    font-family: 'Benton Sans Medium';
+    font-family: 'Benton Sans Medium', Arial, Helvetica, sans-serif;
     font-size: 12px;
     color: rgba(0, 0, 0, 0.8);
     margin-top: 18px;
@@ -184,7 +170,7 @@ body {
 }
 
 .parameter {
-    font-family: 'Tableau Light', 'Segoe UI', sans-serif;
+    font-family: 'Tableau Light', 'Benton Sans', Arial, Helvetica, sans-serif;
     font-size: 12px;
     color: inherit;
     border: 1px solid #CBCBCB;
@@ -276,7 +262,7 @@ select.parameter:hover {
 }
 
 .delimiter-text-field > input {
-    font-family: 'Benton Sans';
+    font-family: 'Benton Sans', Arial, Helvetica, sans-serif;
     padding-right: 0;
     text-align: center;
 }
